# webkit

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/webkit/: __init__.py  deep_search.py  scrape.py  search.py  webkit.py
src/webkit/search/: brave_api.py
tests/: test_webkit.py
