[build-system]
requires = [
    "setuptools>=60",
    "setuptools-scm>=8.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "webkit"
version = "0.2.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "ajrlewis", email = "hello@ajrlewis.com" }
]
dependencies = [
    "beautifulsoup4==4.12.3",
    "lxml<=5.0.0",
    "loguru==0.7.2",
    "duckduckgo-search==6.3.2",
    "httpx==0.27.2",
    "fake-useragent==1.5.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.*"]
