[build-system]
requires = [
    "setuptools>=60",
    "setuptools-scm>=8.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "webkit"
version = "0.4.0"
description = "A collection of web scraping and searching tools."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "ajrlewis", email = "hello@ajrlewis.com" }
]
dependencies = [
    "beautifulsoup4==4.12.3",
    "lxml<=5.0.0",
    "loguru",
    "httpx==0.27.2",
    "fake-useragent==1.5.1",
    "python-dotenv",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.*"]
